@@ -1,3 +1,8 @@
+2007-04-23 Fixed some problems with polar -- dded general polygon
+           clipping to clip the lines a nd grids to the polar axes.
+           Added support for set_rmax to easily change the maximum
+           radial grid.  Added support for polar legend
+
 2007-04-16 Added autofmt_xdate to handle adjusting the bottom and
            rotating the tick labels for date plots when the ticks
            often overlap
